--- a/src/CollegePredictor/CollegePredictor.css
+++ b/src/CollegePredictor/CollegePredictor.css
@@ -9,14 +9,16 @@
     width: 100%;
     display: flex;
     justify-content: center;
-    align-items: center;
 }
 
 .form{
-    width: 500px;
+    width: 400px;
     padding: 20px;
     box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.253);
     margin: 20px 0px;
+    max-height: 400px;
+    position: sticky;
+    top: 0;
 }
 
 .title-1{
@@ -33,17 +35,22 @@
 }
 
 .list{
-    width: 1000px;
+    width: 100%;
+    padding: 20px;
     margin-bottom: 50px;
 }
 
 .item{
     width: 100%;
     display: flex;
-    justify-content: space-between;
+    gap: 20px;
 }
 
 .head{
     font-weight: 700;
-    margin-top: 40px;
+}
+
+.container{
+    display: flex;
+    padding: 10px 20px;
 }
